--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "ioredis": "^5.3.2",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.0.0",
     "prettier": "^2.8.8",
     "telegraf": "^4.12.2",
     "tsx": "^3.12.7",
     "typescript": "*"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "rm -rf dist && tsc",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
