--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app:
     build: .
-    container_name: "class-motification-service"
+    container_name: "service"
     restart: "always"
     env_file:
       - .env
